Update greeting message in index.html to include user name

--- a/basic-app/templates/index.html
+++ b/basic-app/templates/index.html
@@ -6,7 +6,7 @@
     <title>Jenkins</title>
 </head>
 <body>
-    <p>Hello Jenkins!</p>
+    <p>Hello Jenkins! Deep this side</p>
 </body>
 <style>
     body {
