--- a/basic-app/templates/index.html
+++ b/basic-app/templates/index.html
@@ -11,8 +11,8 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
-        color: #333;
+        background-color: #000;
+        color: yellow;
         text-align: center;
         margin-top: 50px;
     }
