Add informative message about CI/CD practices in index.html

--- a/basic-app/templates/index.html
+++ b/basic-app/templates/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p>Hello Jenkins! Deep from this side</p>
+    <p>CI/CD is a powerful practice that automates software development workflows.</p>
 </body>
 <style>
     body {
